<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>com.smilebat.learntribe</groupId>
		<artifactId>sbcloud-parent-pom</artifactId>
		<version>1.0.0-SNAPSHOT</version>
	</parent>

	<groupId>com.smilebat.learntribe</groupId>
	<artifactId>learntribe-inquisitve</artifactId>
	<version>1.0.3-SNAPSHOT</version>
	<packaging>jar</packaging>
	<name>learntribe-inquisitve</name>
	<description>Initial</description>
	<properties>
		<java.version>11</java.version>
		<jackson.version>2.5.2</jackson.version>
		<maven-compiler-plugin.version>3.10.1</maven-compiler-plugin.version>
		<model.version>1.1.0-SNAPSHOT</model.version>
		<commons.version>1.1.0-SNAPSHOT</commons.version>
	</properties>

	<scm>
		<developerConnection>scm:git:https://github.com/SLearnTribe/learntribe-inquisitve.git</developerConnection>
		<connection>https://github.com/SLearnTribe/learntribe-inquisitve</connection>
		<tag>HEAD</tag>
	</scm>
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>com.smilebat.learntribe</groupId>
				<artifactId>learntribe-common-framework</artifactId>
				<version>${commons.version}</version>
				<scope>import</scope>
				<type>pom</type>
			</dependency>
			<dependency>
				<groupId>com.smilebat.learntribe</groupId>
				<artifactId>learntribe-model</artifactId>
				<version>${model.version}</version>
				<scope>import</scope>
				<type>pom</type>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.cloud</groupId>
			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-devtools</artifactId>
<!--			<scope>runtime</scope>-->
<!--			<optional>true</optional>-->
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-tomcat</artifactId>
<!--			<scope>provided</scope>-->
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.cloud</groupId>
			<artifactId>spring-cloud-starter-openfeign</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.cloud</groupId>
			<artifactId>spring-cloud-starter-security</artifactId>
			<version>2.2.5.RELEASE</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-oauth2-jose</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-oauth2-resource-server</artifactId>
		</dependency>
		<dependency>
			<groupId>com.smilebat.learntribe</groupId>
			<artifactId>learntribe-client</artifactId>
			<version>${commons.version}</version>
		</dependency>
		<dependency>
			<groupId>com.smilebat.learntribe</groupId>
			<artifactId>learntribe-api</artifactId>
			<version>${model.version}</version>
		</dependency>
		<dependency>
			<groupId>io.github.openfeign</groupId>
			<artifactId>feign-gson</artifactId>
			<version>10.11</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>
		<dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql</artifactId>
			<scope>runtime</scope>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-configuration-processor</artifactId>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>1.18.24</version>
			<scope>provided</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>


			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
		</plugins>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-release-plugin</artifactId>
					<version>3.0.0-M6</version>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>
	<profiles>
		<profile>
			<id>docker-deploy</id>
			<build>
				<plugins>
					<plugin>
						<groupId>com.spotify</groupId>
						<artifactId>dockerfile-maven-plugin</artifactId>
						<version>1.4.13</version>
						<executions>
							<execution>
								<id>default</id>
								<goals>
									<goal>build</goal>
									<goal>push</goal>
								</goals>
							</execution>
							<execution>
								<id>tag-latest</id>
								<goals>
									<goal>build</goal>
									<goal>push</goal>
								</goals>
								<configuration>
									<tag>latest</tag>
								</configuration>
							</execution>
						</executions>
						<configuration>
							<repository>registry.hub.docker.com/smilebat96/learntribe-inquisitve</repository>
							<tag>${project.version}</tag>
							<skipDockerInfo>true</skipDockerInfo>
							<username>smilebat96</username>
							<password>${env.DOCKER_HUB_TOKEN}</password>
						</configuration>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-release-plugin</artifactId>
						<version>3.0.0-M6</version>
						<configuration>
							<tagNameFormat>v@{project.version}</tagNameFormat>
						</configuration>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-deploy-plugin</artifactId>
						<version>2.8.2</version>
						<configuration>
							<skip>true</skip>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
</project>
